# python_ddd

./: README.md
.github/workflows/: ci.yaml
db/: create_table.sql  docker-compose.yml
ddd/: README.md  mypy.ini  pyproject.toml  ruff.toml
ddd/src/ddd/domain/: task.py  task_repository.py
ddd/src/ddd/infrastructure/: in_memory_task_repository.py  mysql_task_repository.py  test_in_memory_task_repository.py  test_mysql_task_repository.py
ddd/src/ddd/infrastructure/connector/: mysql_connector.py
ddd/src/ddd/infrastructure/grpc/: test_todo_grpc_server.py  todo_grpc_server.py
ddd/src/ddd/infrastructure/repository/: mysql_task_repository.py
ddd/src/ddd/usecase/: add_task_usecase.py  get_task_usecase.py  list_all_task_usecase.py  remove_task_usecase.py
ddd/src/frontend/: app.py
ddd/src/pb/: todo_pb2.py  todo_pb2.pyi  todo_pb2_grpc.py
ddd/src/proto/: todo.proto
